add other project and change api pixsel project

--- a/Api Pexels/index.html
+++ b/Api Pexels/index.html
@@ -7,8 +7,16 @@
     <title>Pexels API</title>
 </head>
 <body>
-    <div class="img">
+    <div class="title-container">
+        <ul>
+            <li><h4>Autor:</h4> Ahmedow Aganepes</li>
+            <li><h4>Autor address:</h4>https://github.com/aganepes</li>
+            <li><h4>Photo discription:</h4> This was done to show our skill. </li>
+            <li><h4>Width:</h4>None </li>
+            <li><h4>Height:</h4>None</li>
+        </ul>
     </div>
+    <div class="img"></div>
     <script src="script.js"></script>
 </body>
 </html>
