change content of menu 3d

--- a/3D Menu/index.html
+++ b/3D Menu/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <ul>
-        <li style="--p:5"><a href="#">Menu</a></li>
-        <li style="--p:4"><a href="#">Home</a></li>
-        <li style="--p:3"><a href="#">Aganepes</a></li>
-        <li style="--p:2"><a href="#">Prosess</a></li>
-        <li style="--p:1"><a href="#">About</a></li>
+        <li style="--p:5"><a href="#">This</a></li>
+        <li style="--p:4"><a href="#">Project</a></li>
+        <li style="--p:3"><a href="#">create</a></li>
+        <li style="--p:2"><a href="#">by</a></li>
+        <li style="--p:1"><a href="#">Aganepes</a></li>
     </ul>
     <ul>
-        <li style="--p:5"><a href="#">Menu</a></li>
-        <li style="--p:4"><a href="#">Home</a></li>
-        <li style="--p:3"><a href="#">Aganepes</a></li>
-        <li style="--p:2"><a href="#">Prosess</a></li>
-        <li style="--p:1"><a href="#">About</a></li>
+        <li style="--p:5"><a href="#">This</a></li>
+        <li style="--p:4"><a href="#">Project</a></li>
+        <li style="--p:3"><a href="#">create</a></li>
+        <li style="--p:2"><a href="#">by</a></li>
+        <li style="--p:1"><a href="#">Aganepes</a></li>
     </ul>
 </body>
 </html>
