Card Swap Transition

--- a/Card Swap Transition Effects/index.html
+++ b/Card Swap Transition Effects/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Card Swap Transition</title>
 </head>
     <div class="container">
         <div class="card front-card">
-            <h1>Front - Aganepes</h1>
+            <h1>Front Card</h1>
             <a href="#" class="btn front">
                 Swap to back 
             </a>
         </div>
         <div class="card back-card">
-            <h1>Back - Aganepes</h1>
+            <h1>Back Card</h1>
             <a href="#" class="btn back">
                 Swap to front 
             </a>
