not change files

--- a/Quize App my -/index.html
+++ b/Quize App my -/index.html
@@ -29,7 +29,7 @@
                     </li>
                 </ul> -->
             </div>
-        <button class="next-question" type="submit" onclick="history.go(0)">Submit</button>
+        <button class="next-question" type="button" onclick="history.go(0)">Submit</button>
     </div>
     <script src="script.js"></script>
 </body>
