change video background project

--- a/Video Background -/index.html
+++ b/Video Background -/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Profile Card Drawer UI Design| by Aganepes Ahmedow</title>
+    <title>Video background by Aganepes Ahmedow</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <section class="showcase">
         <header>
             <h2 class="logo">Travel</h2>
             <div class="toggle"></div>
         </header>
-        <video src="/public/video.mp4" autoplay muted loop></video>
+        <video src="public/video.mp4" autoplay muted loop></video>
         <div class="overlay"></div>
         <div class="text">
             <h2>Never Stop</h2>
@@ -21,9 +22,9 @@
             <a href="#">Explore</a>
         </div>
         <ul class="social">
-            <li><a href="#"><img src="./public/3.png" alt="" width="40px"/></a></li>
-            <li><a href="#"><img src="./public/3.png" alt="" width="40px"/></a></li>
-            <li><a href="#"><img src="./public/3.png" alt="" width="40px"/></a></li>
+            <li><a href="#"><img src="./public/google_logo.svg" alt="" width="40px"/></a></li>
+            <li><a href="#"><img src="./public/google_logo.svg" alt="" width="40px"/></a></li>
+            <li><a href="#"><img src="./public/google_logo.svg" alt="" width="40px"/></a></li>
         </ul>
     </section>
     <div class="menu">
@@ -33,7 +34,6 @@
             <li><a href="#">Destination</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
-
         </ul>
     </div>
     <script src="./scirpt.js"></script>
