card drawer ui init

--- a/Cart Drawer UI -/index.html
+++ b/Cart Drawer UI -/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+     <div class="card-container">
+        <div class="card-header">
+            <h3 class="header">someone famous</h3>
+            <p>creative designer</p>
+        </div>
+        <div class="content">
+            <img src="./man.jpg" alt="Man">
+            <button>hire me</button>
+        </div>
+        <div class="bottom-button">
+            <div class="part"></div>
+        </div>
+     </div>
     <script src="./scirpt.js"></script>
 </body>
 </html>
