--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -7,9 +7,10 @@
 	<link rel="shortcut icon" href="public/icons/motion_play.svg" type="image/svg">
 	<title>Music player && "Häzirki zaman" okuw merkezi </title>
 	<link rel="stylesheet" href="style.css">
+	<script src="./public/snowstorm.js"></script>
 </head>
-
 <body>
+	<!-- <div id="particles-js"></div> -->
 	<div class="wrapper">
 		<div class="container">
 			<div class="music-image">
@@ -47,6 +48,7 @@
 		</div>
 	</div>
 	<script src="script.js" type="module"></script>
+	<!-- <script src="./public/particles.min.js"></script> -->
 </body>
 
 </html>
