--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" href="public/icons/motion_play.svg" type="image/svg">
 	<title>Music player && "Häzirki zaman" okuw merkezi </title>
 	<link rel="stylesheet" href="style.css">
-	<script src="./public/snowstorm.js"></script>
+	<!-- <script src="./public/snowstorm.js"></script> -->
 </head>
 <body>
 	<!-- <div id="particles-js"></div> -->
